--- a/Aulas/css/styles.css
+++ b/Aulas/css/styles.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2? family= Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700; 1.900 & display=trocar');
 html, body{
     margin: 0;
     padding: 0;
+}
+*{
+    font-family: 'Roboto', sans-serif;
 }
 nav{
     position: absolute;
@@ -15,6 +19,7 @@ nav .Logosite{
     float: left;
     width: 70px;
 }
+/*configuração navegação*/
 nav a{
     display: block;
     width: auto;
@@ -24,6 +29,59 @@ nav a{
     background: rgb(0, 0, 0);
     line-height: 53px;
     color: #ffffff;
+    text-decoration: none;
+    font-size: 18px;
+    font-style: oblique;
 
+
+}
+/*regra dos conteúdos*/
+main{
+    padding: 80px 20px 80px 20px;
+
+}
+.homeArticle{
+
+    width: 45%;
+    background: #ccc;
+    margin: 15px 10px 2px 5px;
+    border-radius: 10px;
+    box-shadow: -2px -1px 6px 2px rgba(0,0,0,0.6);
+    padding: 15px;
+    display: inline-block;
+    
+}
+.homeArticle img{
+    float: left;
+    margin-right: 10px;
+    border: 1px solid red;
+    border-radius: 15px;
+
+}
+.homeArticle h2{
+    font-size: 20px;
+    text-transform: uppercase;
+    
+
+}
+.homeArticle p{
+    font-style: italic;
+}
+.homeArticle a{
+    display: inline-block;
+    width: auto;
+    padding: 4px;
+    background: rgb(15, 3, 3);
+    border-radius: 5px;
+    color: #fff;
+    text-decoration: none;
+    float: right;
+    transition: 0.50s padding ease-out, 0.50s border-radius ease-out, 0.50 border ease-out;
+
+}
+.homeArticle a:hover{
+    box-shadow: -2px -1px 6px 2px rgba(0,0,0,0.6);
+    padding: 6px;
+    transition: 0.50s padding ease-out, 0.50s margin eade-out, 0.50s border-radius ease-out
 
 }
