--- a/Aulas/css/styles.css
+++ b/Aulas/css/styles.css
@@ -106,4 +106,40 @@ main{
     overflow: hidden;
     float: left;
     margin: 5px;
+    
 }
+form.formulas{
+    margin: 0 auto;
+    padding: 1em;
+    border: 1px solid rgb(74, 184, 228);
+    background-color: rgb(74, 184, 228);
+    border-radius: 5px;
+    
+}
+div.nomes label{  
+    display: block;
+
+}
+input.caixa1{
+    width: 40%;
+    height: 20px;    
+    display:inline-block;
+    margin-bottom: 10px;
+    margin-left: 2%;
+    
+}
+
+input.caixa2{
+    width: 40%;
+    margin: 1%;
+    height: 20px;  
+    display:inline-block; 
+}
+div.emails label{
+    display: block;
+}
+
+
+
+
+
